--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -35,5 +35,11 @@
   "WARNING": {
     "SINGULAR": "Warning",
     "PLURAL": "Warnings"
+  },
+  "HTTP_ERRORS": {
+    "INVALID_CREDENTIALS": "invalid password or email",
+    "USER_ALREADY_EXISTS": "User with email: {{value}} already exists!",
+    "SOMETHING_WENT_WRONG": "something went wrong!",
+    "SESSION_EXPIRED": "session expired please login again!"
   }
 }
